working redirect on tabs from controller(need to specify tab and fix checkboxes)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,9 +36,9 @@
 			color: #f8fafc;
 		}
 
-		.tab-content{
+		/* .tab-content{
 			display: none;
-		}
+		} */
 
 		.tab-content.current{
 			display: inherit;
