empty ogloszenia button change

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1100,6 +1100,8 @@
 		.empty-ogl h2{
 			font-weight: bold;
 	    font-size: 26px;
+			padding-top: 1em;
+			border-top: 1px solid #ddd;	
 		}
 
 		.empty-ogl a{
