--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,7 +220,7 @@
 				width: 90%;
 			}
 
-			.ogl-info .favor{
+			.ogl-info .favoriteContainer{
 				padding-top: 40px;
 			}
 		}
@@ -1547,7 +1547,7 @@
     }
 }
 
-	#favorite, .favor{
+	#favorite, .favoriteContainer{
 		width: 24px;
 		height: 24px;
 		display: inline-block;
