--- a/public/css/style.css
+++ b/public/css/style.css
@@ -519,21 +519,19 @@
 			width: auto;
 		}
 
-		/* .ogloszenie-info-content h4{
+		.ogloszenie-info-content h5{
 			font-weight: lighter;
-			line-height: 0.4;
 			font-size: 1rem;
 			margin-top: 0.35em;
 		}
 
 
-		.ogloszenie-info-content h5{
+		.ogloszenie-info-content h4,
+		.ogloszenie-description-content h4{
 			font-weight: bold;
-			margin: 0;
-			padding: 0;
 			color: #2a66b5;
-			font-size: 1.15rem;
-		} */
+			font-size: 1.2rem;
+		}
 
 		.ogloszenie-options-btn{
 			background: #efefef;
@@ -549,7 +547,19 @@
 			margin-bottom: 1em;
 		}
 
+
+		.ogloszenie-info-container,
+		.additional-info-container {
+			display: flex;
+			flex-wrap: wrap;
+		}
+
 		@media (min-width: 320px){
+			.ogloszenie-info-item,
+			.ogloszenie-info-additional{
+				 width: 100%;
+				 flex: 0 100%;
+			}
 
 				.ogloszenie-header-title{
 					width: 100%;
@@ -574,12 +584,12 @@
 					margin-bottom: 1em;
 				}
 
-				/* .ogloszenie-info-content{
+				.ogloszenie-info-content{
 					display: block;
 					width: 100%;
 					height: auto;
 					padding: 0.75em;
-				} */
+				}
 
 				.ogloszenie-options-btn{
 					display: table;
@@ -604,6 +614,12 @@
 		}
 
 		@media (min-width: 480px){
+			.ogloszenie-info-item,
+			.ogloszenie-info-additional{
+				 width: 100%;
+				 flex: 0 50%;
+			}
+
 			.modal-footer-ms .card-btn{
 				padding: 0.375rem 1.8rem;
 			}
@@ -620,7 +636,7 @@
 				max-height: 375px;
 			}
 
-			/* .ogloszenie-info-content{
+			.ogloszenie-info-content{
 				display: block;
 				width: 100%;
 				height: auto;
@@ -628,7 +644,7 @@
 
 			.ogloszenie-info-content{
 				padding: 1em;
-			} */
+			}
 		}
 
 		@media (min-width: 768px){
@@ -644,43 +660,15 @@
 		}
 
 		@media (min-width: 992px){
+			.ogloszenie-info-item,
+			.ogloszenie-info-additional{
+				 width: 100%;
+				 flex: 0 25%;
+			}
+
 			.carousel-item img{
 				height: 557px;
 				max-height: 557px;
-			}
-
-			/* .ogloszenie-info-content{
-				display: inline-block;
-				width: 713.9px;
-				height: 163px;
-			} */
-
-			.ogloszenie-options-btn{
-				display: inline-block;
-				width: 228px;
-				padding: 1em;
-				border-spacing: 0;
-			}
-
-			.ogloszenie-middle-content{
-				margin-bottom: 0;
-			}
-
-			.ogloszenie-button-1,
-			.ogloszenie-button-2{
-				display: table;
-				width: 100%;
-			}
-
-			.ogloszenie-phone-num{
-				margin-bottom: 1em;
-				width: 100%;
-				display: inline-block;
-			}
-
-			.ogloszenie-button-1 span,
-			.ogloszenie-button-2 span{
-				display: table-cell;
 			}
 		}
 
@@ -688,16 +676,6 @@
 			.carousel-item img{
 				height: 680px;
 				max-height: 680px;
-			}
-
-			/* .ogloszenie-info-content{
-				width: 893.9px;
-				height: 163px;
-			} */
-
-			.ogloszenie-button-1,
-			.ogloszenie-button-2{
-				display: table;
 			}
 		}
 
@@ -710,13 +688,13 @@
 		border-radius: 0.3rem;
 	}
 
-		/* .ogloszenie-info-content{
+		.ogloszenie-info-content{
 			margin: 0 1em 1em 0;
 			background: #efefef;
 			border-radius: 0.3rem;
 			vertical-align: top;
 			text-align: left;
-		} */
+		}
 
 		.ogloszenie-phone-num{
 			height: 60px;
@@ -1574,22 +1552,13 @@
 		color: red;
 	}
 
+	.check-icon{
+		font-size: 10px !important;
+		font-weight: 900 !important;
+		color: #2a66b5;
+	}
 
-		.ogloszenie-info-item {
-		  width: 100%
-		}
-
-		.ogloszenie-info-container {
-		  display: flex;
-		  flex-wrap: wrap;
-		}
-
-		.ogloszenie-info-container>div {
-		  flex: 0 50%;
-		  /*demo*/
-		  box-sizing:border-box
-		}
-
-		.check-icon{
-			font-size: 12px !important;
-		}
+	.ogloszenie-info-item,
+	.ogloszenie-info-additional{
+		padding: .25em;
+	}
