Added hints to inputs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1562,3 +1562,21 @@
 	.ogloszenie-info-additional{
 		padding: .25em;
 	}
+
+	.info.material-icons{
+		cursor: default;
+		display: inline-block;
+		color: #2a66b5;
+		font-size: 15px;
+		-webkit-touch-callout: none; /* iOS Safari */
+			-webkit-user-select: none; /* Safari */
+			 -khtml-user-select: none; /* Konqueror HTML */
+				 -moz-user-select: none; /* Old versions of Firefox */
+					-ms-user-select: none; /* Internet Explorer/Edge */
+							user-select: none; /* Non-prefixed version, currently
+																		supported by Chrome, Edge, Opera and Firefox */
+	}
+
+	.h4in{
+		display: inline;
+	}
