--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1557,10 +1557,6 @@
 						height: 400px;
 					}
 
-					.fav-item-detail{/*  */
-						/* max-width: 228.954px; */
-					}
-
 				.favorite-item{/*  */
 					 flex: 0 100%;
 					 margin-bottom: 10px;
@@ -1578,6 +1574,10 @@
 			@media (min-width: 480px){
 				.fav-item{
 					height: 360px;
+				}
+
+				.fav-item-detail{/*  */
+					max-width: 215.609px;
 				}
 
 				.favorite-item{/*  */
@@ -1606,7 +1606,7 @@
 				}
 
 				.fav-item-detail{/*  */
-					max-width: 228.954px;
+					max-width: 260px;
 				}
 
 				.favorite-item:nth-of-type(4) ~ .favorite-item {
@@ -1648,7 +1648,7 @@
 				}
 
 				.fav-item-detail{/*  */
-					max-width: 231.375px;
+					max-width: 230px;
 				}
 
 				.favorite-item:nth-of-type(3n){
@@ -1676,6 +1676,31 @@
 				.fav-item-detail{/*  */
 					max-width: 274.920px;
 				}
+			}
+
+			.showhide{
+				width: 160px;
+				background: #dddddd;
+				text-align: center;
+				vertical-align: middle;
+				border: 1px solid transparent;
+				padding: 0.375rem 0.75rem;
+				font-size: 0.9rem;
+				line-height: 1.6;
+				border-radius: 0.25rem;
+				color: #000;
+				font-weight: bold;
+				cursor: pointer;
+			}
+
+			.showhide:hover{
+				background: #2a66b5;
+				color: #fff;
+			}
+
+			.showhide:active{
+				background: #3490dc;
+				color: #fff;
 			}
 
 
